# hot-sig-scope

./: main.py  pyproject.toml
core/: audio.py  configs.py  draw.py  fir_core.py  fir_freq_response.py  hot_reload.py  render.py  scope.py
filtro_fir_esp32/: filtro_fir_esp32.ino  fir_taps.h
filtro_iir_esp32/: filtro_iir_esp32.ino
